force-app/main/default/objects/deductible__c/deductible__c.object-meta.xml
<CustomObject>
    <label>השתתפות עצמית</label>
    <nameField>
        <label>שם השתתפות עצמית</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>השתתפויות עצמיות</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>