force-app/main/default/objects/deductible__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>תביעה קשורה</label>
    <referenceTo>Novidea_HPC__Claim__c</referenceTo>
    <relationshipLabel>השתתפויות עצמיות</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>