force-app/main/default/objects/deductible__c/fields/Deductible_amount__c.field-meta.xml
<CustomField>
    <fullName>Deductible_amount__c</fullName>
    <label>סכום השתתפות עצמית</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>